--- a/index.html
+++ b/index.html
@@ -376,7 +376,22 @@
             <button class="normal">Sign Up</button>
         </div>
     </section>
+  
+    <footer class="section-p1">
+        <div class="col">
+            <img src="img/logo.png" alt="">
+            <h4>Contact</h4>
+            <p><strong>Phone:</strong>(+91) 01 6798 2345</p>
+            <p><strong>Hours:</strong>10:00 - 18:00, Mon-Sat</p>
+            <div class="follow">
+                <h4>Follow Us</h4>
+                <div class="icon">
+                    <i class="fa-brands fa-facebook"></i>
+                </div>
+            </div>
+        </div>
 
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
