--- a/index.html
+++ b/index.html
@@ -379,18 +379,50 @@
   
     <footer class="section-p1">
         <div class="col">
-            <img src="img/logo.png" alt="">
+            <img class="logo" src="img/logo.png" alt="">
             <h4>Contact</h4>
-            <p><strong>Phone:</strong>(+91) 01 6798 2345</p>
+            <p><strong>Phone:</strong>+01 2222 365/(+91) 01 6798 2345</p>
             <p><strong>Hours:</strong>10:00 - 18:00, Mon-Sat</p>
             <div class="follow">
                 <h4>Follow Us</h4>
                 <div class="icon">
                     <i class="fa-brands fa-facebook"></i>
+                    <i class="fa-brands fa-twitter"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-pinterest"></i>
+                    <i class="fa-brands fa-youtube"></i>
                 </div>
             </div>
         </div>
-
+     <div class="col">
+        <h4>About</h4>
+        <a href="#">About Us</a>
+        <a href="#">Delivery Information</a>
+        <a href="#">Privacy Policy</a>
+        <a href="#">Terms & Conditions</a>
+        <a href="#">Contact Us</a>
+     </div>
+     <div class="col">
+        <h4>My Account</h4>
+        <a href="#">Sign In</a>
+        <a href="#">View Cart</a>
+        <a href="#">My Wishlist</a>
+        <a href="#">Track My Order</a>
+        <a href="#">Help</a>
+     </div>
+<div class="col install">
+    <h4>Intall App</h4>
+    <p>From App Store or Google Store</p>
+  <div class="row">
+    <img src="img/pay/app.jpg" alt="">
+    <img src="img/pay/play.jpg" alt="">
+  </div>
+   <p>Secured Payment Gateway</p>
+   <img src="img/pay/pay.png" alt="">
+</div>
+<div class="copyright">
+    <p>© 2025,Clothing Collection</p>
+</div>
     </footer>
     <script src="script.js"></script>
 </body>
